Add properties to AddColor component and handleSubmit method

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
+.squareContainer{
+  display: flex;
+  justify-content: center;
+}
 
+.square {
+  width: 200px;
+  height: 200px;
+  background-color: blue;
+}
